# Oxidized-Soundboard

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: add_view.rs  audio_settings.rs  main.rs  play_buttons.rs  sound_player.rs
