[package]
name = "Oxidized-Soundboard"
version = "0.1.0"
authors = ["F-bh <72809273+F-bh@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "^0.3"
iced_native = "^0.4"
rodio = "^0.14"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.17"